[package]
name = "etwdiff_rs"
version = "0.1.0"
edition = "2021"
authors = ["OBED-PROJECT"]
description = "A Linux-first command-line cybersecurity research tool to quantify ETW telemetry degradation."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
